@@ -81,6 +81,11 @@ We <b>strongly</b> recommend that you use Jakarta Oro.
                      Defaults to <i>false</i>.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">encoding</td>
+    <td valign="top">The encoding of the file. <em>since Ant 1.6</em></td>
+    <td align="center">No - defaults to default JVM encoding</td>
+  </tr>
 </table>
 <h3>Examples</h3>
 <pre>  &lt;replaceregexp file=&quot;${src}/build.properties&quot;
